Added a widget for users to update their location, closes #60
